--- a/Web.config
+++ b/Web.config
@@ -15,6 +15,10 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
   </appSettings>
   
+  <connectionStrings>
+    <add name="ConnString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Mathelandia\Source\Repos\ASP\App_Data\Database.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  
   <system.webServer>
     <caching enabled="true" enableKernelCache="true" maxCacheSize="1000" maxResponseSize="512000"/>
     <staticContent>
